--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,14 @@ ul {
 .clear {
   clear: both;
 }
+
+.home {
+  background: url("https://images4.alphacoders.com/975/thumbbig-975294.webp")
+    no-repeat center center;
+  height: 55vh;
+}
+
+.header h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
